# Federated-dental-risk-vol2

./: .gitignore  README.md  SETUP.md  logistic_regression.ipynb  pyproject.toml
Groundwork/: Federated_Linear_Regression.ipynb  Logistic_regression_FL_train_all.ipynb  Logistic_regression_centralized_one_complication.ipynb  Logistic_regression_centralized_train_all.ipynb  Multibe_Regression_Lasso_Centralized.ipynb  Multibel_Regression_Federated_Lasso.ipynb  Multibel_Regression_Forward_Backward_interaktions.ipynb  Multibel_Regression_One_binary_target.ipynb  Multibel_Regression_foreach_complication_Centralized.ipynb  Multibel_Regression_foreach_complication_FL.ipynb  Multibel_regression_Forward_Backward_nointeraktions.ipynb  Multiple_Regression_Federated_Lasso.ipynb  Multiple_Regression_Forward_Backward_interaktions.ipynb  Multiple_Regression_Lasso_Centralized.ipynb  Multiple_Regression_One_binary_target.ipynb  Multiple_Regression_foreach_complication_Centralized.ipynb  Multiple_Regression_foreach_complication_FL.ipynb  Multiple_regression_Forward_Backward_nointeraktions.ipynb  Softmax.ipynb  logistic_regression.ipynb  logistic_regression_2.ipynb  logistic_regression_FL_one_complication.ipynb  multi_regression.ipynb  multi_regression_standardiseret.ipynb
configs/: client_profiles.json  extraction_binary_stats.json  extraction_type_stats.json  generation_config.json  global_thresholds.json  noise_config.json  risk_stats.json
data/: Synthetic_data_generator_third_molar_extraction.ipynb  synthetic_wisdom_tooth_nonIID_realistic.xlsx
docs smoothy/: STATE_AND_NEXT_STEPS.md
(+245 files in other folders)
