[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fdrp"
version = "0.1.0"
description = "Federated-Dental-Risk-Prediction"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "wandb>=0.16.0",
  "pandas>=2.0",
  "openpyxl>=3.1",
  "typer>=0.12",
  "tqdm",
  "torch>=2.0",
  "torchmetrics>=1.0",
  "scikit-learn>=1.3",
]

[project.scripts]
fdrp-generate = "fdrp.data_generation.cli.generate:run"
fdrp-train = "fdrp.ml.cli:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["fdrp*"]